[package]
name = "dmbot"
version = "0.1.0"
edition = "2021"

# discord bot framework
[dependencies.serenity]
version = "0.12.1"
features = ["cache", "framework", "standard_framework", "voice", "rustls_backend"]

# extention for serenity to enable voice (and more important: ytdl support); requires cmake on the system
[dependencies.songbird]
version = "0.4"
features = ["builtin-queue"]

[dependencies.symphonia]
version = "0.5.2"
features = ["aac", "mp3", "isomp4", "alac"]

# async framework, because every fucking library needs to be async now
[dependencies]
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
reqwest = "0.11"